# cangjielsp

./: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm  tree-sitter1.md  tree-sitter11.md  tree-sitter12.md  tree-sitter2.md  tree-sitter3.md  tree-sitter4.md  tree-sitter5.md  tree-sitter6.md  tree-sitter7.md  tree-sitter8.md  tree-sitter9.md  zed10.md  zed11.md  zed12.md  zed13.md  zed14.md  zed15.md  zed16.md  zed17.md  zed18.md  zed19.md  zed20.md  zed21.md  zed22.md  zed23.md  zed24.md  zed25.md  zed26.md  zed27.md  zed28.md  zed29.md  zed30.md  zed31.md  zed32.md  zed33.md  (+18 more)
.zed/: settings.json
debug_adapter_schemas/: Cangjie.json
grammars/: cangjie.wasm
languages/Cangjie/: brackets.scm  config.toml  debugger.scm  folds.scm  highlights.scm  indents.scm  outline.scm  runnables.scm  schema.json  snippets.scm  tags.scm  tasks.json  textobjects.scm
languages/CangjieCjcov/: config.toml  highlights.scm
languages/CangjieCjdb/: config.toml  highlights.scm
languages/CangjieCjfmt/: config.toml  highlights.scm
languages/CangjieCjlint/: config.toml  highlights.scm
languages/CangjieCjpm/: config.toml  highlights.scm
languages/CangjieCjprof/: config.toml  highlights.scm
src/: cangjie.rs  cjcov.rs  cjdb.rs  cjfmt.rs  cjlint.rs  cjpm.rs  cjprof.rs  config.rs  corpus.rs  extension.rs  language_server.rs  lib.rs  rag_utils.rs  syntax.rs  tree_sitter_utils.rs  utils.rs
tests1/: 1.json  highlights.scm  lib.rs1  locals.scm
