[package]
name = "cangjielsp"
version = "0.1.0"
edition = "2024"
# publish = false
# license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
path = "src/cangjie.rs"
# target = "wasm32-wasi"

[dependencies]
zed_extension_api = "0.7.0"
# serde = { version = "1.0.130", features = ["derive"] }
# serde_json = "1.0.145"
